улучшил квери и покрыл тестами
